[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "irongantry"
version = "1.0.0"
description = "Security-hardened Python container engine — zero external dependencies"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = []

[project.scripts]
irongantry = "irongantry.cli:main"
